--- a/ionic-hello-world/src/app/home/home.page.html
+++ b/ionic-hello-world/src/app/home/home.page.html
@@ -7,14 +7,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list>
+    <ion-item *ngFor="let item of [0, 1, 2, 3]" [routerLink]="['/', 'detail', item]">
+      Item {{ item }}
+    </ion-item>
+  </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>footer one</ion-title>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-title>footer two</ion-title>
+  </ion-toolbar>
+</ion-footer>
