--- a/ionic-hello-world/src/app/home/home.page.html
+++ b/ionic-hello-world/src/app/home/home.page.html
@@ -8,18 +8,16 @@
 
 <ion-content [fullscreen]="true">
   <ion-list lines="full">
-    <ion-item *ngFor="let item of [0, 1, 2, 3]" [routerLink]="['/', 'detail', item]" color="dark">
-      <ion-avatar slot="start">
-        <img src="https://avatars2.githubusercontent.com/u/950327?s=400&u=de915177ecc12da0c78f80d8c472bb3eb6a8f2f0&v=4"
-          alt="">
-      </ion-avatar>
-      <ion-thumbnail slot="end">
-        <img src="https://avatars2.githubusercontent.com/u/950327?s=400&u=de915177ecc12da0c78f80d8c472bb3eb6a8f2f0&v=4"
-          alt="">
+    <ion-item *ngFor="let item of items" [routerLink]="['/', 'detail', item.id.value]" color="dark"
+      (click)="showModal(item)">
+      <ion-thumbnail slot="start">
+        <img [src]="item.picture.thumbnail" alt="">
       </ion-thumbnail>
-      Item {{ item }}
+      <p>{{ item.name.first }} {{ item.name.last}}</p>
     </ion-item>
   </ion-list>
+  <ion-button (click)="showAlert()">Show Alert</ion-button>
+  <ion-button (click)="showModal()">Show Modal</ion-button>
 </ion-content>
 
 <ion-footer>
