--- a/ionic-hello-world/src/app/home/home.page.html
+++ b/ionic-hello-world/src/app/home/home.page.html
@@ -17,7 +17,7 @@
     </ion-item>
   </ion-list>
   <ion-button (click)="showAlert()">Show Alert</ion-button>
-  <ion-button (click)="showModal()">Show Modal</ion-button>
+  <!-- <ion-button (click)="showModal()">Show Modal</ion-button> -->
 </ion-content>
 
 <ion-footer>
