--- a/ionic-hello-world/src/app/home/home.page.html
+++ b/ionic-hello-world/src/app/home/home.page.html
@@ -16,9 +16,11 @@
       <p>{{ item.name.first }} {{ item.name.last}}</p>
     </ion-item>
   </ion-list>
+  <pre>{{ location }}</pre>
   <img [src]="photo" alt="" *ngIf="photo">
   <ion-button (click)="showAlert()">Show Alert</ion-button>
   <ion-button (click)="takePhoto()">Take Photo</ion-button>
+  <ion-button (click)="getLocation()">Get Location</ion-button>
   <!-- <ion-button (click)="showModal()">Show Modal</ion-button> -->
 </ion-content>
 
