--- a/ionic-hello-world/src/app/home/home.page.html
+++ b/ionic-hello-world/src/app/home/home.page.html
@@ -17,7 +17,23 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding ion-text-center">
+<ion-content [fullscreen]="true">
+  <ion-grid>
+    <ion-row>
+      <ion-col size-lg="6" size-md="4" size="1">01</ion-col>
+      <ion-col offset-lg="4">02</ion-col>
+      <ion-col>03</ion-col>
+      <ion-col>04</ion-col>
+      <ion-col push-md="5">05</ion-col>
+      <ion-col>06</ion-col>
+      <ion-col>07</ion-col>
+      <ion-col>08</ion-col>
+      <ion-col>09</ion-col>
+      <ion-col>10</ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <!--
   <ion-list lines="full">
     <ion-item *ngFor="let item of items" [routerLink]="['/', 'tabs', 'tab1', 'detail', item.id.value]" color="dark"
       (click)="showModal(item)">
